# grants-data-portal

./: .gitignore  Makefile  README.md  pyproject.toml  wrangler.toml
.github/workflows/: run.yml  web.yml
dag/: definitions.py
src/gdp/: definitions.py
src/gdp/defs/assets/: my_asset.py
web/: index.html
