[project]
name = "grants-data-portal"
version = "0.0.0"
description = "Open source, serverless, and local-first Data Platform for Gitcoin Grants Data."
readme = "README.md"
authors = [{ name = "David Gasquez", email = "davidgasquez@gmail.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "dagster>=1.9.11",
    "dagster-duckdb>=0.25.11",
    "dagster-gcp>=0.25.11",
    "google-cloud-bigquery-storage>=2.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dag"]

[dependency-groups]
dev = ["dagster-webserver>=1.9.11"]

[tool.dagster]
module_name = "dag.definitions"
