[project]
name = "gdp"
requires-python = ">=3.9,<3.13"
version = "0.0.0"
dependencies = ["dagster"]

[project.entry-points]
"dagster_dg.plugin" = { gdp = "gdp.lib" }

[dependency-groups]
dev = ["dagster-webserver"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "gdp"

[tool.dg.project.python_environment]
active = true
